Alterações de linkagem no frontend

--- a/FrontEnd/Perfil/Index.html
+++ b/FrontEnd/Perfil/Index.html
@@ -79,7 +79,7 @@
                             <h1 class="bio">Marcos</h1>
                             <ul class="botao-sair"> 
                                 <li>
-                                    <a class="sair-perfil" href="#">Sair</a>
+                                    <a class="sair-perfil" href="../TelaLogin/Index.html">Sair</a>
                                 </li>
 
                             </ul>
