--- a/FrontEnd/TelaCadastro/Index.html
+++ b/FrontEnd/TelaCadastro/Index.html
@@ -54,7 +54,7 @@
 
                 <section class="extra-section">
                     <div class="connect">
-                        <p>Tem uma conta?&nbsp<a href="#">Conecte-se</a></p>
+                        <p>Tem uma conta?&nbsp<a href="../TelaLogin/Index.html">Conecte-se</a></p>
                     </div>
     
                     <div class="app">
