--- a/FrontEnd/TelaLogin/Index.html
+++ b/FrontEnd/TelaLogin/Index.html
@@ -41,7 +41,7 @@
             <section class="final-part">
                 <div class="content-final">
                     <p>Não tem uma conta?</p>
-                    <h1>Cadastre-se.</h1>
+                    <a href="../TelaCadastro/Index.html"><h1>Cadastre-se.</h1></a>
                 </div>
             </section>
 
