--- a/FrontEnd/Feed/Index.html
+++ b/FrontEnd/Feed/Index.html
@@ -98,7 +98,7 @@
                 <div class="perfil">
 
                     <div class="perfil-imagem">
-                        <img src="img/IMG_20201028_173745_375 (4).jpg">
+                        <a href ="../Perfil/Index.html"> <img src="img/IMG_20201028_173745_375 (4).jpg"></a>
                     </div>
 
                     <div class="perfil-tag">
