--- a/FrontEnd/Perfil/Index.html
+++ b/FrontEnd/Perfil/Index.html
@@ -58,6 +58,10 @@
                     <section class="texto-perfil">
                         <div class="nome-perfil">
                             <h2>marcos_roberto</h2>
+                            <a class="engrenagem-perfil" 
+                            href="../EdicaoPerfil/Index.html"><img src="img/Engrenagem.editt.svg" alt="Engrenagem">
+                            </a>
+
                         </div>
                         <ul class=links-perfil>
                             <li class="pss">
