--- a/FrontEnd/TelaCadastro/Index.html
+++ b/FrontEnd/TelaCadastro/Index.html
@@ -15,7 +15,9 @@
             <section class="form-section"> 
                 
                 <div class="box-main">
-                    <h1 class="title">InstaDev</h1> 
+                   <div class="imagem-logo">
+                       <img src="img/img_logo.svg alt=">
+                   </div>
                     <div class="pre-form">
                         <p>Cadastre-se para ver fotos e</p>
                         <p>vídeos dos seus amigos.</p>
