--- a/FrontEnd/TelaLogin/Index.html
+++ b/FrontEnd/TelaLogin/Index.html
@@ -14,7 +14,9 @@
     <main>
         <section class="form-section">
             <div class="box-main"> 
-                <h1 class="title">InstaDev</h1> 
+                <div class="imagem-logo">
+                    <img src="img/img_logo.svg" alt="Logo InstaDev">
+               </div>
                 <form>
                     <div class="register">
                         <input type="email" id="entrar-email" placeholder="Email" class="input"> 
